# media_app

./: CMakeLists.txt  main.cpp
include/ui/: mainwindow.h  medialistview.h  mediaview.h
include/vlcwrapper/: instance.h  media.h  medialist.h  mediaplayer.h
ui/: mainwindow.cpp  medialistview.cpp  mediaview.cpp
vlcwrapper/: instance.cpp  medialist.cpp  mediaplayer.cpp
